# github-stats

./: .env.example  .gitignore  CLAUDE_STATE.md  QUERY_BUILDER_TODO.md  README.md  STREAMLIT_UI_PLAN.md  clean_synthetic_data.py  fix_timestamps.py  install_geckodriver.sh  pyproject.toml  run_streamlit.py  setup_env.sh  start_dashboard.sh
.claude/checkpoints/: checkpoint-2025-07-03-01-45-08.json  checkpoint-2025-07-03-01-45-34.json
.claude/commands/: checkpoint.md  ckpt.md  up.md  update.md
.github/workflows/: pr-checks.yml
github_stats/: __init__.py  constants.py
github_stats/api/: __init__.py  client.py  exceptions.py
github_stats/cli/: __init__.py  app.py
github_stats/models/: __init__.py  base.py  interactions.py
github_stats/reports/: __init__.py  email_reporter.py  scheduler.py
github_stats/templates/: email_report.html
github_stats/tracking/: __init__.py  tracker.py
github_stats/ui/: __init__.py  charts.py
github_stats/utils/: __init__.py  config.py  database.py  star_summary.py
streamlit_app/: __init__.py  app.py
streamlit_app/components/: data_management.py  developer_stats.py  overview.py  query_builder.py  repository_stats.py  visualization.py
streamlit_app/pages/: developer_stats.py  overview.py  repository_stats.py
tests/: __init__.py  conftest.py  test_database_utils.py  test_streamlit_ui.py
