[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-stats"
version = "0.1.0"
description = "Track interactions with GitHub organizations and repositories"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=1.10.0,<2.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "jinja2>=3.1.0",
    "schedule>=1.2.0",
    "streamlit>=1.29.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "altair>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
github-stats = "github_stats.cli:app"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W", "B", "C90", "UP", "S"]
ignore = ["S101"]  # Allow assert in tests

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"